Bug 449007 - Help button inside Options dialog sends to a broken page
Summary: Help button inside Options dialog sends to a broken page
Status: RESOLVED FIXED
Alias: None
Product: kdiff3
Classification: Applications
Component: application (other bugs)
Version First Reported In: 1.9.4
Platform: Microsoft Windows Microsoft Windows
: NOR grave
Target Milestone: ---
Assignee: michael
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-23 11:53 UTC by 石庭豐
Modified: 2022-01-25 18:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.9.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description 石庭豐 2022-01-23 11:53:04 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Open Options dialog
2. Press the Help in the lower right corner

OBSERVED RESULT
"404 Not Found"
The opened web page is
https://docs.kde.org/stable5/en/kdiff3/kdiff3/kdiff3/index.html.html
which does not exist.

EXPECTED RESULT
This page:
https://docs.kde.org/stable5/en/kdiff3/kdiff3/options.html

SOFTWARE/OS VERSIONS
Windows: Windows 11 (but this is irrelevant, IMO)
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.2
Comment 1 michael 2022-01-25 18:42:07 UTC
Git commit 296a5d6da92fb7b269c18861c8275558d399658c by Michael Reeves.
Committed on 25/01/2022 at 17:15.
Pushed by mreeves into branch 'master'.

Drop uneeded doc path /anchor specification

KDiff3 uses the default doc path in all cases don't add confusion to this.
FIXED-IN:1.9.5

M  +1    -1    src/optiondialog.cpp
M  +0    -1    src/org.kde.kdiff3.desktop

https://invent.kde.org/sdk/kdiff3/commit/296a5d6da92fb7b269c18861c8275558d399658c
Comment 2 michael 2022-01-25 18:42:36 UTC
Git commit b0797a044c661c4ed9ae4281bf7a27e3539cd7fe by Michael Reeves.
Committed on 25/01/2022 at 17:29.
Pushed by mreeves into branch '1.9'.

Drop uneeded doc path /anchor specification

KDiff3 uses the default doc path in all cases don't add confusion to this.
FIXED-IN:1.9.5
(cherry picked from commit 296a5d6da92fb7b269c18861c8275558d399658c)

M  +1    -1    src/optiondialog.cpp
M  +0    -1    src/org.kde.kdiff3.desktop

https://invent.kde.org/sdk/kdiff3/commit/b0797a044c661c4ed9ae4281bf7a27e3539cd7fe