Drop uneeded doc path /anchor specification

KDiff3 uses the default doc path in all cases don't add confusion to this.

BUG:449007
FIXED-IN:1.9.5