src/optiondialog.cpp
@@ -542,7 +542,7 @@ OptionDialog::OptionDialog(bool bShowDirMergeSettings, QWidget* parent):
 
 void OptionDialog::helpRequested()
 {
-    KHelpClient::invokeHelp(QStringLiteral("kdiff3/index.html"));
+    KHelpClient::invokeHelp();
 }
 
 OptionDialog::~OptionDialog() = default;
